This should fix the weird off-center...ness

--- a/styles/twitch.sass
+++ b/styles/twitch.sass
@@ -3,7 +3,6 @@ $twitch-text-color:     #FFF
 $twitch-viewers-color:  rgba(0, 0, 0, 0.5)
 
 .twitch.stream
-    line-height: 1.4
     background-color: $twitch-color
     color: $twitch-text-color
     margin: .5em 0
@@ -23,6 +22,7 @@ $twitch-viewers-color:  rgba(0, 0, 0, 0.5)
         text-overflow: ellipsis
         word-break: break-all
         word-wrap: break-word
+        vertical-align: top
     strong
         font-weight: 600
     em
@@ -30,7 +30,6 @@ $twitch-viewers-color:  rgba(0, 0, 0, 0.5)
         opacity: .5
 
     .icon
-        line-height: 1.55em
         margin-left: -.15em
     .viewers
         position: absolute
